--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,11 @@ server.port=8080
 #MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/db_suit
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=123456789
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #UploadFile
