--- a/pom.xml
+++ b/pom.xml
@@ -64,32 +64,32 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>io.jsonwebtoken</groupId>-->
-<!--			<artifactId>jjwt-api</artifactId>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.8.8</version>
 		</dependency>
+				<dependency>
+					<groupId>org.springframework.security</groupId>
+					<artifactId>spring-security-test</artifactId>
+					<scope>test</scope>
+				</dependency>
+
 <!--				<dependency>-->
-<!--					<groupId>org.springframework.security</groupId>-->
-<!--					<artifactId>spring-security-test</artifactId>-->
-<!--					<scope>test</scope>-->
+<!--					<groupId>org.webjars</groupId>-->
+<!--					<artifactId>bootstrap</artifactId>-->
+<!--					<version>5.0.1</version>-->
 <!--				</dependency>-->
 
-		<!--		<dependency>-->
-		<!--			<groupId>org.webjars</groupId>-->
-		<!--			<artifactId>bootstrap</artifactId>-->
-		<!--			<version>5.0.1</version>-->
-		<!--		</dependency>-->
-
-		<!--		<dependency>-->
-		<!--			<groupId>org.webjars</groupId>-->
-		<!--			<artifactId>jquery</artifactId>-->
-		<!--			<version>3.4.1</version>-->
-		<!--		</dependency>-->
+<!--				<dependency>-->
+<!--					<groupId>org.webjars</groupId>-->
+<!--					<artifactId>jquery</artifactId>-->
+<!--					<version>3.4.1</version>-->
+<!--				</dependency>-->
 
 		<dependency>
 			<groupId>org.webjars</groupId>
@@ -123,23 +123,23 @@
 			<version>5.5.13.3</version>
 		</dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>io.jsonwebtoken</groupId>-->
-<!--			<artifactId>jjwt-api</artifactId>-->
-<!--			<version>0.10.5</version>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>io.jsonwebtoken</groupId>-->
-<!--			<artifactId>jjwt-impl</artifactId>-->
-<!--			<version>0.10.5</version>-->
-<!--			<scope>runtime</scope>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>io.jsonwebtoken</groupId>-->
-<!--			<artifactId>jjwt-jackson</artifactId>-->
-<!--			<version>0.10.5</version>-->
-<!--			<scope>runtime</scope>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+			<version>0.10.5</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<version>0.10.5</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId>
+			<version>0.10.5</version>
+			<scope>runtime</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
