--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -73,28 +76,29 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.8</version>
 		</dependency>
-				<dependency>
-					<groupId>org.springframework.security</groupId>
-					<artifactId>spring-security-test</artifactId>
-					<scope>test</scope>
-				</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 
-<!--				<dependency>-->
-<!--					<groupId>org.webjars</groupId>-->
-<!--					<artifactId>bootstrap</artifactId>-->
-<!--					<version>5.0.1</version>-->
-<!--				</dependency>-->
+		<!--				<dependency>-->
+		<!--					<groupId>org.webjars</groupId>-->
+		<!--					<artifactId>bootstrap</artifactId>-->
+		<!--					<version>5.0.1</version>-->
+		<!--				</dependency>-->
 
-<!--				<dependency>-->
-<!--					<groupId>org.webjars</groupId>-->
-<!--					<artifactId>jquery</artifactId>-->
-<!--					<version>3.4.1</version>-->
-<!--				</dependency>-->
+		<!--				<dependency>-->
+		<!--					<groupId>org.webjars</groupId>-->
+		<!--					<artifactId>jquery</artifactId>-->
+		<!--					<version>3.4.1</version>-->
+		<!--				</dependency>-->
 
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>webjars-locator-core</artifactId>
 		</dependency>
+
 
 		<dependency>
 			<groupId>net.sf.supercsv</groupId>
