--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 #MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/db_suit
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=nammao003
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
@@ -24,3 +24,10 @@ ra.jwt.secret=Ringoyu
 ra.jwt.expiration=86400000
 
 spring.main.allow-bean-definition-overriding=true
+ #javamail
+spring.mail.host=your-mail-server-host
+spring.mail.port=587
+spring.mail.username=your-username
+spring.mail.password=your-password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
